fixed too long content inside progress bar
When progress bar consist of numbers from 1 to 13, it's okay, but if numbers inside is bigger than 10 this is causing massive expansion so progress bar not fitting in the card completely

--- a/src/components/ProgressBar/ProgressBar.module.css
+++ b/src/components/ProgressBar/ProgressBar.module.css
@@ -1,12 +1,12 @@
 .progress_bar span {
-	font-size: 2em;
+	font-size: 1.9em;
 	margin-right: 0.5em;
-	font-weight: 400;
+	font-weight: 100;
 }
 
 .watched {
 	color: red;
-	font-weight: 500 !important;
+	font-weight: 400 !important;
 }
 
 .is_more_after span:last-child {
@@ -14,5 +14,5 @@
 }
 
 .is_more_after span:nth-last-child(2)::after {
-	content: ' ...';
+	content: '...';
 }
